# merkle_tree_rs

./: .gitignore  .travis.yml  Cargo.toml  README.md
examples/: example.rs
src/: hash_function.rs  hash_function_string.rs  lib.rs  merkle_tree.rs  merkle_tree_string.rs  serialization_format.rs
tests/: bench_append.rs  bench_build_tree.rs
